--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,10 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-.top-left {
-  position: absolute;
-  top: 10px;
-  left: 10px;
+a:hover {
+  color: #ffffff;
 }
 
 @keyframes logo-spin {
